--- a/index.html
+++ b/index.html
@@ -194,8 +194,6 @@
         <p style="display: inline">Servus, ich stelle mich mal kurz vor und zwar bin ich der Dr.Mifo aka Jayden. Meine Hobbys/was ich gerne mache sind Youtube Videos drehen, Jugendfeuerwehr(JFW),Fahrrad fahren ,Mit Freunden irgend was unternehmen und noch vieles mehr. Mein Größter Wunsch auf Youtube ist irgendwann mal die 1 Mio. Abos zu schaffen. Ich aktzeptiere alle die auf meinen Kanal sind bzw. im Chat sind. Wenn ihr mir helfen wollt mein Traum zu Verwirklichen dann lasst gerne ein Abo da: </p><a style="display: inline" href="https://www.youtube.com/@DrMifo">Dr Mifo auf YouTube</a>
     </div>
 </section>
-    <!-- Server Status Anzeige -->
-<!-- Server Status Anzeige -->
 <section id="server-status">
     <h2>Server Status</h2>
     <p id="status-message">Lade Serverstatus...</p>
@@ -204,12 +202,6 @@
     <p id="motd" style="display:none;"></p>
 </section>
 
-<!-- Online Spieler Sektion 
-<section id="online-players" style="display:none;">
-    <h2>Online Spieler</h2>
-    <div id="players-list"></div>
-</section>
--->
 <script>
     // Minecraft Server Adresse
     const serverAddress = 'blockattack.fun'; // Ändere dies auf deine Serveradresse
@@ -217,7 +209,7 @@
     // API URL
     const apiUrl = `https://api.mcsrvstat.us/3/${serverAddress}`;
 
-    // Abrufen des Serverstatus und Spieler
+    // Abrufen des Serverstatus
     fetch(apiUrl)
         .then(response => response.json())
         .then(data => {
@@ -225,17 +217,17 @@
             const serverIpElement = document.getElementById('server-ip');
             const playersOnlineElement = document.getElementById('players-online');
             const motdElement = document.getElementById('motd');
-            const playersListElement = document.getElementById('players-list');
-            const onlinePlayersSection = document.getElementById('online-players');
             
             if (data.online) {
                 // Überprüfen, ob die MOTD das Wort "Wartung" enthält
-                const motdText = data.motd.clean.join(" ");
+                const motdText = data.motd.clean.join(" "); // Kombiniere alle Zeilen der MOTD
                 if (motdText.toLowerCase().includes("wartung")) {
+                    // Wenn "Wartung" in der MOTD enthalten ist, wird der Server als offline angezeigt
                     statusMessageElement.innerText = 'Server ist in Wartung!';
                     statusMessageElement.classList.remove("online");
                     statusMessageElement.classList.add("offline");
                 } else {
+                    // Wenn der Server online ist und keine Wartung angezeigt wird
                     statusMessageElement.innerText = 'Server ist Online!';
                     statusMessageElement.classList.remove("offline");
                     statusMessageElement.classList.add("online");
@@ -245,46 +237,13 @@
                 serverIpElement.innerText = `IP: ${data.ip}`;
                 playersOnlineElement.innerText = `Spieler Online: ${data.players.online} / ${data.players.max}`;
                 motdElement.innerText = `MOTD: ${data.motd.clean.join(' ')}`;
-
-                // Spieler anzeigen, falls vorhanden
-                if (data.players.list && data.players.list.length > 0) {
-                    // Spieler unter "Online Spieler" anzeigen
-                    onlinePlayersSection.style.display = 'block';
-                    playersListElement.innerHTML = '';
-
-                    data.players.list.forEach(player => {
-                        // UUID der Spieler ermitteln und Mojang API verwenden
-                        fetch(`https://api.mojang.com/users/profiles/minecraft/${player}`)
-                            .then(response => response.json())
-                            .then(playerData => {
-                                const playerName = playerData.name;
-                                const playerUUID = playerData.id;
-                                const skinUrl = `https://crafatar.com/avatars/${playerUUID}?size=64`;
-
-                                // Spielername und Skin in die Liste einfügen
-                                const playerElement = document.createElement('div');
-                                playerElement.classList.add('player');
-
-                                const playerImage = document.createElement('img');
-                                playerImage.src = skinUrl;
-                                playerImage.alt = `${playerName}'s Skin`;
-                                playerImage.style.width = '64px';
-                                playerImage.style.height = '64px';
-                                
-                                const playerNameElement = document.createElement('span');
-                                playerNameElement.textContent = playerName;
-
-                                playerElement.appendChild(playerImage);
-                                playerElement.appendChild(playerNameElement);
-                                playersListElement.appendChild(playerElement);
-                            })
-                            .catch(error => console.error('Fehler beim Abrufen des Spielers:', error));
-                    });
-                }
             } else {
+                // Server ist offline
                 statusMessageElement.innerText = 'Server ist Offline!';
                 statusMessageElement.classList.remove("online");
                 statusMessageElement.classList.add("offline");
+
+                // Nur die IP anzeigen
                 serverIpElement.innerText = `IP: ${data.ip}`;
             }
 
@@ -294,10 +253,12 @@
             motdElement.style.display = 'block';
         })
         .catch(error => {
+            // Fehler beim Abrufen der Daten
             document.getElementById('status-message').innerText = 'Fehler beim Abrufen des Serverstatus.';
             console.error('Fehler:', error);
         });
 </script>
+
 
 <br><br><br><br><br><br><br><br><br><br><br><br>
 
