--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+<!--
+
+
+Copyright 2025 TheErrorExe
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+-->
+
+<!--
+
+This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and will be a Copyright Holder of this Software.
+
+-->
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -141,14 +159,20 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">Über uns</a></li>
-                <li><a href="/server.html">Server Info</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="/" style="display: flex; align-items: center; text-decoration: none;">
+                    <img src="/favicon.ico" alt="Blockattack Logo" style="width: 32px; height: 32px; margin-right: 8px;">
+                    <span style="font-size: 1.5rem; font-weight: bold; color: #333;">Blockattack</span>
+                </a>
+            </li>
+            <li><a href="/about.html">Über uns</a></li>
+            <li><a href="/server.html">Server Info</a></li>
+        </ul>
+    </nav>
+</header>
+
 
     <section id="home">
         <h1>Willkommen auf Blockattack</h1>
