--- a/server.html
+++ b/server.html
@@ -30,7 +30,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
         <ul>
             <li>
                 <a href="/" style="display: flex; align-items: center; text-decoration: none;">
-                    <img src="/favicon.png" alt="Blockattack Logo" style="width: 32px; height: 32px; margin-right: 8px;">
+                    <img src="/favicon.ico" alt="Blockattack Logo" style="width: 32px; height: 32px; margin-right: 8px;">
                     <span style="font-size: 1.5rem; font-weight: bold; color: #333;">Blockattack</span>
                 </a>
             </li>
