--- a/index.html
+++ b/index.html
@@ -289,6 +289,15 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
         });
 </script>
 
+<section id="home">
+    <h2>Regelwerk (ich muss noch einen admin fragen einbettung zu aktivieren sorry)</h2>
+    <iframe src="https://docs.google.com/document/d/e/PLACEHOLDER/pub?embedded=true" width="100%" height="500" frameborder="0"></iframe>
+</section>
+
+<section id="home">
+    <h2>Lerne das Team kennen (Noch in Development)</h2>
+    <a href="/team.html" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px; text-align: center;">Lerne das Team kennen</a>
+</section>
 
 <br><br><br><br><br><br><br><br><br><br><br><br>
 
