--- a/index.html
+++ b/index.html
@@ -208,15 +208,10 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
     <section id="home">
         <br>
         <iframe src="https://discord.com/widget?id=1220023443391643830&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
-        <a onclick="wegenVery()" style="color: blue; text-decoration: underline;">Trete den Discord bei</a> <!-- Nerve niemals einen Programmierer, @Very -->
+        <!-- a onclick="discord()" style="color: blue; text-decoration: underline;">Trete den Discord bei</a -->
         <br>
         <br>
     </section>
-    <script>
-    function wegenVery() {
-        alert("Geht nicht, Very wollte es nicht umstellen, deswegen geht dieser button nicht, schaue im minecraft server nach")
-    }
-    </script>
     <section id="about-owner">
     <h2>Über den Owner: Dr. Mifo</h2>
     <div class="owner-info">
