--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@ This Website was developed by TheErrorExe for Blockattack. TheErrorExe is and wi
                 <li><a href="/server.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Server
                         Info</a></li>
                 <li><a href="/news.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Neuigkeiten</a></li>
+                                <li><a href="/guide.html" style="text-decoration: none; color: #fff; margin-left: 20px;">Beitrittsguide</a></li>
             </ul>
         </nav>
         <div>
